fixes list item overflowing container issue

--- a/content/css/theme.scss
+++ b/content/css/theme.scss
@@ -76,7 +76,8 @@ $min-card-width: 300px;
 $padding-main: 1rem;
 $padding-card: 0.5rem;
 
-$main-col-width: 40rem;
+$main-col-width: 50rem;
+$main-img-width: 50rem;
 
 $sidebar-width: 30%;
 $sidebar-min-width: 250px;
